--- a/index.html
+++ b/index.html
@@ -10,36 +10,65 @@
 <div class="paper heart">
 
 </div>
-
-  
 <div class="paper image">
-  <p> I'm super obsessed and in </p>
-    <p>Love with You 😍 </p>
+  <p> last but not the least ily</p>
+    <p>& im always there and proud of you lil one</p>
+</div>
+<div class="paper image">
+  <p> thank you for literally everything</p>
+    <p>I super duper love you for that </p>
+   <img src="images/IMG_5463.PNG" />
+</div>
+<div class="paper image">
+  <p> thank you for endless giggles </p>
+    <p>and calls </p>
+   <img src="images/IMG-20230513-WA0009.jpg" />
+</div>
+<div class="paper image">
+  <p> thank you for healing my heart </p>
+    <p>making me feel loved and protected </p>
+   <img src="images/WhatsApp Image 2023-05-13 at 00.59.27.jpg" />
+</div>
+
+<div class="paper image">
+  <p> thanks for all the efforts </p>
+    <p>be it noods or anything else</p>
+   <img src="images/WhatsApp Image 2023-05-13 at 00.58.29.jpg" />
+</div>
+
+<div class="paper image">
+  <p> Listening to my faltu gossips </p>
+    <p>pura din</p>
    <img src="images/IMG_8097 (1).png" />
 </div>
 
 <div class="paper image">
-  <p</p>
-  <img src="images/WhatsApp Image 2023-05-09 at 23.28.24.jpg" />
+  <p>thanks for reassuring </p>
+   <p>and calming me down ❤️ </p>
+  <img src="images/WhatsApp Image 2023-05-13 at 00.57.53.jpg" />
 </div>
 
 <div class="paper image">
-  <p>How can you </p>
-   <p> be so cute ❤️ </p>
+  <p>you're hella </p>
+   <p>cute ❤️ </p>
+
+  <img src="images/IMG-20230513-WA0005.jpg" />
+</div>
+
+<div class="paper image">
+  <p>you're the prettiest</p>
+   <p> girl i've been with ❤️ </p>
 
   <img src="images/IMG_6902.JPG" />
 </div>
 
 
-
 <div class="paper red">
-<p class="p1">My Favorite</p>
-<p class="p2">Person 😍</p>
+<p class="p1">My Favorite Hooman 😍</p>
 </div>
 
 <div class="paper">
-<p class="p1">You are Cute, hot,sexy,beautiful </p>
-  <p class="p1">and mine <span style="color: red !important;">❤️</span></p>
+<p class="p1">Because you're always there for me ❤️</p>
 </div>
 
 <div class="paper">
